--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -4,7 +4,11 @@
   flex-direction: column;
   align-items: center;
 }
-
+.userinfo button{
+  border:1px solid #aaa;
+  background:#fff;
+  font-size:16px;
+}
 .userinfo-avatar {
   width: 128rpx;
   height: 128rpx;
